overflow fix

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ header {
     align-content: center;
     padding: 24px 100px;
     margin: 0;
+    overflow: hidden;
 }
 
 header section div a {
